<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inspector"
            android:icon="@drawable/ic_menu_inspector"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:title="@string/menu_inspector" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_preferences"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:title="@string/menu_preferences" />
    </group>

</menu>